# review-database

./: .clippy.toml  .gitignore  .markdownlint.yaml  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  diesel.toml  update_blocklist_fields.py
.github/workflows/: ci.yml  doc.yml  release.yml
src/: access_token.rs  account.rs  backends.rs  backup.rs  batch_info.rs  category.rs  classifier_fs.rs  cluster.rs  collections.rs  column_statistics.rs  csv_column_extra.rs  csv_indicator.rs  data.rs  event.rs  event.rs.bak  event.rs.bak2  lib.rs  migrate.rs  migration.rs  model.rs  node.rs  outlier.rs  qualifier.rs  schema.rs  scores.rs  state.rs  status.rs  tables.rs  tags.rs  test.rs  ti.rs  time_series.rs  top_n.rs  traffic_filter.rs  types.rs  util.rs
src/backends/: memory.rs  postgres.rs
src/backends/migrations/2023-04-03-171325_remove_refinery/: down.sql
src/backends/migrations/2023-04-13-211209_add_source/: down.sql  up.sql
src/backends/migrations/2023-10-25-192729_deprecate_event_range/: down.sql  up.sql
src/backends/migrations/2024-08-12-213848_drop_outlier/: up.sql
src/backends/migrations/2024-09-24-191205_delete_unused_csv_tables/: down.sql  up.sql
src/backends/migrations/2024-12-10-015627_rename_event_sources_to_sensors/: down.sql  up.sql
src/backends/migrations/2025-02-20-004504_rename_event_sources_to_sensors_in_db_functions/: down.sql  up.sql
src/backends/migrations/2025-06-16-155446_update_model/: down.sql  up.sql
src/backends/migrations/2025-08-13-211623_remove_column_stats/: down.sql  up.sql
src/backends/migrations/2025-09-05-201432_replace_string_with_int_for_cluster_id/: down.sql  up.sql
src/backends/migrations/2025-09-08-120000_change_cluster_id_to_numerical/: down.sql  up.sql
src/backends/migrations/2025-09-26-182704_remove_tables/: down.sql  up.sql
src/backends/postgres/: de.rs  error.rs  transaction.rs
src/backends/postgres/migrations/: V1__review_tables_and_procedures.sql
src/backends/postgres/migrations/2023-04-03-171325_remove_refinery/: up.sql
src/backends/postgres/migrations/2023-04-13-211209_add_source/: down.sql  up.sql
src/backends/postgres/migrations/2023-05-05-185144_deprecate_outliers/: down.sql  up.sql
src/backends/postgres/migrations/2023-05-16-202453_update_attempt_event_ids_update/: down.sql  up.sql
src/backends/postgres/migrations/2023-08-23-194508_add_model_version/: down.sql  up.sql
src/backends/postgres/migrations/2023-10-25-192729_deprecate_event_range/: down.sql  up.sql
src/backends/postgres/migrations/2024-01-11-203740_remove_category/: down.sql
src/backends/postgres/migrations/2024-02-05-235812_remove_status_qualifier/: down.sql  up.sql
src/backends/postgres/migrations/2024-08-12-213848_drop_outlier/: down.sql
src/backup/: postgres.rs  postgresql.rs
src/collections/: indexed_map.rs  indexed_multimap.rs  indexed_set.rs  map.rs
src/column_statistics/: load.rs  round.rs  save.rs
src/column_statistics/load/: binary.rs  datetime.rs  enum.rs  float.rs  int.rs  ipaddr.rs  text.rs
src/column_statistics/save/: binary.rs  datetime.rs  enum.rs  float_range.rs  int.rs  ipaddr.rs  statistics.rs  text.rs
src/event/: bootp.rs  common.rs  conn.rs  dcerpc.rs  dhcp.rs  dns.rs  ftp.rs  http.rs  kerberos.rs  ldap.rs  log.rs  malformed_dns.rs  mqtt.rs  network.rs  nfs.rs  ntlm.rs  radius.rs  rdp.rs  smb.rs  smtp.rs  ssh.rs  sysmon.rs  tls.rs  tor.rs  unified_http.rs  unusual_destination_pattern.rs
src/migration/: migrate_classifiers_to_filesystem.rs  migrate_cluster.rs  migrate_column_stats.rs  migrate_model.rs  migrate_time_series.rs  migration_structures.rs
src/tables/: access_token.rs  account_policy.rs  accounts.rs  agent.rs  allow_network.rs  backup_config.rs  batch_info.rs  block_network.rs  category.rs  cluster.rs  column_stats.rs  config.rs  csv_column_extra.rs  customer.rs  data_source.rs  external_service.rs  filter.rs  hosts.rs  model.rs  model_indicator.rs  network.rs  node.rs  outlier_info.rs  qualifier.rs  remote.rs  sampling_policy.rs  scores.rs  status.rs  template.rs  tidb.rs  time_series.rs  tor_exit_node.rs  traffic_filter.rs  triage_policy.rs  triage_response.rs  trusted_domain.rs  trusted_user_agent.rs  unlinked_server.rs
src/top_n/: column.rs  ipaddr.rs  one_to_n.rs  score.rs  time_series.rs
