[package]
name = "review-database"
version = "0.25.0-alpha.8"
edition = "2021"

[dependencies]
aho-corasick = "0.7"
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
bb8-postgres = { version = "0.8", features = [
  "with-serde_json-1",
  "with-chrono-0_4",
] }
bincode = "1"
chrono = { version = "0.4.31", default-features = false, features = ["serde"] }
data-encoding = "2"
diesel = { version = "2", features = ["chrono", "postgres", "serde_json"] }
diesel-async = { version = "0.4", features = ["bb8", "postgres"] }
diesel_derives = "2.0"
diesel_migrations = "2"
fallible-iterator = "0.2" # should be the same version as what postgres-protocol depends on
flate2 = "1.0"
futures = "0.3"
ip2location = "0.5"
ipnet = { version = "2", features = ["serde"] }
num-derive = "0.4"
num-traits = "0.2"
postgres-protocol = "0.6"
rand = "0.8"
ring = { version = "0.17", features = ["std"] }
rocksdb = "0.22"
rustls = "0.21" # should be the same version as what tokio-postgres-rustls depends on
rustls-native-certs = "0.6"
rustls-pemfile = "1.0"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
structured = "0.14"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1"
tokio = { version = "1", features = ["macros"] }
tokio-postgres-rustls = "0.10"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
