[package]
name = "review-database"
version = "0.34.0"
edition = "2021"

[dependencies]
aho-corasick = "0.7"
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
bb8-postgres = { version = "0.9", features = [
  "with-serde_json-1",
  "with-chrono-0_4",
] }
bincode = "1"
chrono = { version = ">=0.4.35", default-features = false, features = [
  "serde",
] }
config = { version = "0.15", optional = true }
data-encoding = "2"
diesel = { version = "2", features = ["chrono", "postgres", "serde_json"] }
diesel-async = { version = "0.5", features = ["bb8", "postgres"] }
diesel_derives = "2.0"
diesel_migrations = "2"
fallible-iterator = "0.2" # should be the same version as what postgres-protocol depends on
flate2 = "1.0"
futures = "0.3"
humantime-serde = "1"
ip2location = "0.5.4"
ipnet = { version = "2", features = ["serde"] }
num-derive = "0.4"
num-traits = "0.2"
postgres-protocol = "0.6"
rand = "0.8"
ring = { version = "0.17", features = ["std"] }
rocksdb = "0.23"
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
] } # should be the same version as what tokio-postgres-rustls depends on
rustls-native-certs = "0.8"
rustls-pemfile = "2"
rustls-pki-types = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
structured = "0.15"
strum = "0.26"
strum_macros = "0.26"
thiserror = "2"
tokio = { version = "1", features = ["macros"] }
tokio-postgres-rustls = "0.13"
toml = "0.8.13"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "review-migrate"
required-features = ["migrate"]
path = "src/migrate.rs"

[features]
default = []
migrate = ["config", "tokio/rt-multi-thread"]

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
